test/error/E20.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": [
		{
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	],
	"connections": [
		{
			"type": "exec",
			"input": [1, 0],
			"output": [0, 0]
		}
	]
}
